@@ -3,7 +3,6 @@ Issues:
 * Event status fix. Dead status fix. Zoning status fix.
 * Need a Spellcast -> Lua converter before release.
 * Need to decide what the heck I'm doing with the second argument to user functions.
-* Need to detect when it's not possible to cast (Sleep, Stun, Break, Terror, Charm, etc.) and reset midaction.
 * Change mob_array.type so that it matches validtarget.
 
 Elpy section:
